[gd_scene load_steps=26 format=2]

[ext_resource path="res://Resources/Buttons/SpecializationButton/SpecializationButtonDisabled.tres" type="StyleBox" id=1]
[ext_resource path="res://UI_Elements/splashArtBox.png" type="Texture" id=2]
[ext_resource path="res://THEME.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/SpecializationPage/SpecializationStep.gd" type="Script" id=4]
[ext_resource path="res://Resources/Buttons/SpecializationButton/SpecializationButtonHover.tres" type="StyleBox" id=5]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonDisabled.tres" type="StyleBox" id=7]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonNormal.tres" type="StyleBox" id=8]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonPressed.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonHover.tres" type="StyleBox" id=10]
[ext_resource path="res://UI_Elements/originDescriptionBox.png" type="Texture" id=11]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonPressed.tres" type="StyleBox" id=12]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonNormal.tres" type="StyleBox" id=13]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonHover.tres" type="StyleBox" id=14]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonDisabled.tres" type="StyleBox" id=15]
[ext_resource path="res://Resources/Buttons/SpecializationButton/SpecializationButtonPressed.tres" type="StyleBox" id=17]
[ext_resource path="res://Resources/Buttons/SpecializationButton/SpecializationButtonNormal.tres" type="StyleBox" id=18]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 54
outline_size = 5
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=6]
size = 36
outline_size = 3
outline_color = Color( 0.278431, 0.129412, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="SpecializationStep" type="Control"]
anchor_right = 0.979167
anchor_bottom = 0.918519
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.0430851
anchor_top = 0.0423387
anchor_right = 0.304255
anchor_bottom = 0.989919
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SpecializationSkills" type="RichTextLabel" parent="TextureRect2"]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.169043
anchor_top = 0.180442
anchor_right = 0.822811
anchor_bottom = 0.894063
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "NOT SET"
meta_underlined = false
text = "NOT SET"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextureRect2"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.14053
anchor_top = 0.104773
anchor_right = 0.822811
anchor_bottom = 0.175786
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "skills_list_label"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="TextureRect2"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.10998
anchor_top = 0.142553
anchor_right = 0.869654
anchor_bottom = 0.193617
margin_top = -1.52588e-05
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_left = 0.320213
anchor_top = 0.032258
anchor_right = 1.0
anchor_bottom = 0.999999
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SpecializationName" type="Label" parent="TextureRect3"]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.0250386
anchor_top = 0.0732799
anchor_right = 0.944444
anchor_bottom = 0.193654
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
text = "NOT SET"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="TextureRect3"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.0962437
anchor_top = 0.151308
anchor_right = 0.899061
anchor_bottom = 0.202591
margin_top = -1.52588e-05
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SpecializationDescription" type="RichTextLabel" parent="TextureRect3"]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.0931142
anchor_top = 0.188542
anchor_right = 0.906103
anchor_bottom = 0.853125
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "NOT SET"
text = "NOT SET"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SelectedIdentifier" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.544681
anchor_top = 0.950605
anchor_right = 0.750532
anchor_bottom = 1.01915
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 18 )
toggle_mode = true
pressed = true

[node name="Label" type="Label" parent="SelectedIdentifier"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.905882, 0.886275, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "BUY PACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PreviousSpecialization" type="Button" parent="."]
anchor_left = 0.297872
anchor_top = 0.423387
anchor_right = 0.351064
anchor_bottom = 0.524193
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextSpecialization" type="Button" parent="."]
anchor_left = 0.95
anchor_top = 0.423387
anchor_right = 1.00319
anchor_bottom = 0.524193
margin_right = 0.00012207
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="SelectedIdentifier" to="." method="_on_SelectedIdentifier_pressed"]
[connection signal="button_up" from="PreviousSpecialization" to="." method="_on_PreviousSpecialization_button_up"]
[connection signal="button_up" from="NextSpecialization" to="." method="_on_NextSpecialization_button_up"]
